# ShieldOps

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  ShieldOps  Strategic Roadmap for an AGI-Ready AI Security Platform.md  mkdocs.yml  pyproject.toml  shieldops_events.duckdb
.claude/: settings.json
.claude/commands/: add-connector.md  add-integration.md  analyze-analytics.md  analyze-topology.md  audit-compliance.md  build-agent.md  check-health.md  context-hub.md  create-playbook.md  deploy-agent.md  design-system.md  hunt-threats.md  manage-cloud.md  manage-costs.md  manage-gitops.md  manage-identity.md  manage-knowledge.md  manage-mcp.md  manage-otel.md  manage-sla.md  manage-soc.md  manage-vulns.md  orchestrate-soar.md  protect-data.md  respond-incident.md  review-agent.md  run-agent.md  run-forensics.md  run-redteam.md  run-xdr.md  scan-security.md  secure-agents.md
.claude/hooks/: audit-trail.sh  conventional-commit.sh  gitops-guard.sh  lint-on-edit.sh  pre-stop-check.sh  protect-sensitive-files.sh  security-scan-on-edit.sh  session-init.sh  validate-bash.sh
.github/workflows/: ai-red-team.yml  cd-backend.yml  cd-dashboard.yml  cd-staging.yml  ci.yml  gitops-sync.yml  load-test.yml  publish-sdk.yml  sdk-publish.yml
alembic/versions/: 016_add_agent_status_records.py
dashboard-ui/: CLAUDE.md  TESTING.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
dashboard-ui/e2e/: agent-firewall.spec.ts  mcp-security.spec.ts  nhi-registry.spec.ts  pages.spec.mjs
dashboard-ui/src/: App.tsx  index.css
docs/: AIOPS_RUNBOOK.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  PRODUCTIONIZATION_PLAN.md  PRODUCTION_LAUNCH_RUNBOOK.md  QUICKSTART_DEMO.md  index.md  kafka-scaling.md  tasks.md
docs/agents/: agent-firewall.md  compliance-auditor.md  incident-commander.md  (+7 more)
infrastructure/: CLAUDE.md  README.md
scripts/: generate_license.py  migrate_agents.py  migrate_engines.py  policy_shadow_diff.py
src/: CLAUDE.md
src/shieldops/sdk/: CLAUDE.md  README.md  __init__.py  autogen.py  config.py  crewai.py  interceptor.py  langchain.py  llamaindex.py  openai_agents.py  pyproject.toml  telemetry.py
tests/: CLAUDE.md
(+6797 files in other folders)
