[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shieldops-sdk"
version = "1.0.0"
description = "ShieldOps Agent Firewall SDK — one-line AI agent governance"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "ShieldOps", email = "sdk@shieldops.io" },
]
keywords = ["ai", "security", "agent", "firewall", "governance", "llm", "mcp"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "structlog>=23.0.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.1.0"]
crewai = ["crewai>=0.1.0"]
llamaindex = ["llama-index-core>=0.10.0"]
openai-agents = ["openai-agents>=0.1.0"]
autogen = ["autogen-core>=0.1.0"]
all = [
    "shieldops-sdk[langchain,crewai,llamaindex,openai-agents,autogen]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://shieldops.io"
Documentation = "https://docs.shieldops.io/sdk"
Repository = "https://github.com/shieldops/shieldops-sdk"
Changelog = "https://github.com/shieldops/shieldops-sdk/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.sdist]
exclude = [
    "__pycache__",
    "*.pyc",
    "CLAUDE.md",
    "dist/",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
sources = { "." = "shieldops_sdk" }
exclude = [
    "__pycache__",
    "*.pyc",
    "CLAUDE.md",
    "pyproject.toml",
    "dist/",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
